--- a/src/app/features-card/features-card.component.html
+++ b/src/app/features-card/features-card.component.html
@@ -1,3 +1,11 @@
-<p>
-  features-card works!
-</p>
+<!-- Feature Title 12 -->
+<div class="row">
+    <div class="col-md-3">
+        <a href="#">
+            <img class="img-responsive" src="http://placehold.it/600x300" alt="">
+        </a>
+        <h4>Feature Title 12</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<p>
+        <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
