--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,3 +1,7 @@
-<p>
-  features works!
-</p>
+<h3>Latest Features</h3>
+
+
+<app-features-card></app-features-card>
+<app-features-card></app-features-card>
+<app-features-card></app-features-card>
+<app-features-card></app-features-card>
