--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,70 +1,3 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Application Home</a>
-    </div>
+<app-navbar></app-navbar>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Features <span class="sr-only">(current)</span></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-    <h3>Latest Features</h3>
-
-
-      <!-- Feature Title 12 -->
-      <div class="row">
-          <div class="col-md-3">
-              <a href="#">
-                  <img class="img-responsive" src="http://placehold.it/600x300" alt="">
-              </a>
-              <h4>Feature Title 12</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<p>
-              <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
-          </div>
-      </div>
-
-      <!-- Feature Title 11-->
-            <div class="row">
-                <div class="col-md-3">
-                    <a href="#">
-                        <img class="img-responsive" src="http://placehold.it/600x300" alt="">
-                    </a>
-                    <h4>Feature Title 11</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
-                </div>
-            </div>
-
-      <!-- Feature Title 10 -->
-            <div class="row">
-                <div class="col-md-3">
-                    <a href="#">
-                        <img class="img-responsive" src="http://placehold.it/600x300" alt="">
-                    </a>
-                    <h4>Feature Title 10</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
-                </div>
-            </div>
-
-            <!-- Feature Title 9 -->
-                  <div class="row">
-                      <div class="col-md-3">
-                          <a href="#">
-                              <img class="img-responsive" src="http://placehold.it/600x300" alt="">
-                          </a>
-                          <h4>Feature Title 9</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                          <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
-                      </div>
-                  </div>
+<app-features></app-features>
