--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,7 +1,7 @@
 <h3>Latest Features</h3>
 
 
-<app-features-card></app-features-card>
+<a href="app-features-card"><app-features-card></app-features-card></a>
 <app-features-card></app-features-card>
 <app-features-card></app-features-card>
 <app-features-card></app-features-card>
