--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
       <!-- Feature Title 12 -->
       <div class="row">
           <div class="col-md-3">
-              <a href="#">
+              <router-outlet></router-outlet>
                   <img class="img-responsive" src="http://placehold.it/600x300" alt="">
               </a>
               <h4>Feature Title 12</h4>
@@ -32,39 +32,3 @@
               <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
           </div>
       </div>
-
-      <!-- Feature Title 11-->
-            <div class="row">
-                <div class="col-md-3">
-                    <a href="#">
-                        <img class="img-responsive" src="http://placehold.it/600x300" alt="">
-                    </a>
-                    <h4>Feature Title 11</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
-                </div>
-            </div>
-
-      <!-- Feature Title 10 -->
-            <div class="row">
-                <div class="col-md-3">
-                    <a href="#">
-                        <img class="img-responsive" src="http://placehold.it/600x300" alt="">
-                    </a>
-                    <h4>Feature Title 10</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
-                </div>
-            </div>
-
-            <!-- Feature Title 9 -->
-                  <div class="row">
-                      <div class="col-md-3">
-                          <a href="#">
-                              <img class="img-responsive" src="http://placehold.it/600x300" alt="">
-                          </a>
-                          <h4>Feature Title 9</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                          <a class="btn btn-default" href="#">More Info <span class="glyphicon glyphicon-chevron-right"></span></a>
-                      </div>
-                  </div>
