removed routing because it was not compiling

--- a/src/app/features-card/features-card.component.html
+++ b/src/app/features-card/features-card.component.html
@@ -1,7 +1,7 @@
 <!-- Feature Title 12 -->
 <div class="row">
     <div class="col-md-3">
-        <a href="#">
+        <router-outlet></router-outlet>
             <img class="img-responsive" src="http://placehold.it/600x300" alt="">
         </a>
         <h4>Feature Title 12</h4>
