--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,11 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <router-outlet></router-outlet>
       <a class="navbar-brand" href="#">Application Home</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <router-outlet></router-outlet>
         <li class="active"><a href="#">Features <span class="sr-only">(current)</span></a></li>
       </ul>
     </div>
